--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 .idea/
 binding/build/
 binding/node_modules/
+binding/winlose.dll
+binding/winlose.lib
+binding/yarn-error.log
+
+# copied from "C:\Program Files (x86)\Windows Kits\10\bin\{ARCH}\ucrt\ucrtbased.dll"
+binding/ucrtbased.dll
